--- a/data_engineering.ipynb
+++ b/data_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -40,23 +40,46 @@
     {
      "data": {
       "text/plain": [
-       "19550"
+       "78200"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_meas = pd.read_csv('./Resources/hawaii_measurements.csv')\n",
-    "data_meas_clean = data_meas.dropna(axis=1, how='any')\n",
-    "len(data_meas_clean)"
+    "data_meas.size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39672"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_meas_clean = data_meas.dropna()\n",
+    "data_meas_clean = data_meas_clean[data_meas_clean.prcp != 0]\n",
+    "data_meas_clean.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -161,7 +184,7 @@
        "4      306.6  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -210,6 +233,7 @@
        "      <th></th>\n",
        "      <th>station</th>\n",
        "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
        "      <th>tobs</th>\n",
        "      <th>name</th>\n",
        "      <th>latitude</th>\n",
@@ -222,47 +246,8 @@
        "      <th>0</th>\n",
        "      <td>USC00519397</td>\n",
        "      <td>2010-01-01</td>\n",
+       "      <td>0.08</td>\n",
        "      <td>65</td>\n",
-       "      <td>WAIKIKI 717.2, HI US</td>\n",
-       "      <td>21.2716</td>\n",
-       "      <td>-157.8168</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>2010-01-02</td>\n",
-       "      <td>63</td>\n",
-       "      <td>WAIKIKI 717.2, HI US</td>\n",
-       "      <td>21.2716</td>\n",
-       "      <td>-157.8168</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>2010-01-03</td>\n",
-       "      <td>74</td>\n",
-       "      <td>WAIKIKI 717.2, HI US</td>\n",
-       "      <td>21.2716</td>\n",
-       "      <td>-157.8168</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>2010-01-04</td>\n",
-       "      <td>76</td>\n",
-       "      <td>WAIKIKI 717.2, HI US</td>\n",
-       "      <td>21.2716</td>\n",
-       "      <td>-157.8168</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>2010-01-06</td>\n",
-       "      <td>73</td>\n",
        "      <td>WAIKIKI 717.2, HI US</td>\n",
        "      <td>21.2716</td>\n",
        "      <td>-157.8168</td>\n",
@@ -273,34 +258,26 @@
        "</div>"
       ],
       "text/plain": [
-       "       station        date  tobs                  name  latitude  longitude  \\\n",
-       "0  USC00519397  2010-01-01    65  WAIKIKI 717.2, HI US   21.2716  -157.8168   \n",
-       "1  USC00519397  2010-01-02    63  WAIKIKI 717.2, HI US   21.2716  -157.8168   \n",
-       "2  USC00519397  2010-01-03    74  WAIKIKI 717.2, HI US   21.2716  -157.8168   \n",
-       "3  USC00519397  2010-01-04    76  WAIKIKI 717.2, HI US   21.2716  -157.8168   \n",
-       "4  USC00519397  2010-01-06    73  WAIKIKI 717.2, HI US   21.2716  -157.8168   \n",
+       "       station        date  prcp  tobs                  name  latitude  \\\n",
+       "0  USC00519397  2010-01-01  0.08    65  WAIKIKI 717.2, HI US   21.2716   \n",
        "\n",
-       "   elevation  \n",
-       "0        3.0  \n",
-       "1        3.0  \n",
-       "2        3.0  \n",
-       "3        3.0  \n",
-       "4        3.0  "
+       "   longitude  elevation  \n",
+       "0  -157.8168        3.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merged_data = pd.merge(data_meas_clean, data_station, on = 'station')\n",
-    "merged_data.head()"
+    "merged_data.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
