--- a/database_engineering.ipynb
+++ b/database_engineering.ipynb
@@ -421,7 +421,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1d02d1940>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x264791207b8>"
       ]
      },
      "execution_count": 41,
@@ -441,7 +441,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1d100f748>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x2647911b4e0>"
       ]
      },
      "execution_count": 42,
@@ -461,7 +461,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1cfa30748>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x2647912fc18>"
       ]
      },
      "execution_count": 43,
@@ -481,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1d1d22e0c18>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x26479120ef0>"
       ]
      },
      "execution_count": 44,
